[Bug #1189] Added auto horizontal scroll in templates WBS to fix bug
FEA: ItEr75S04BugFixing

--- a/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
@@ -1709,3 +1709,7 @@ input.z-datebox-text-disd {
 .earned-value-chart .legend-container {
     width: 226px;
 }
+
+.template-tree-tabpanel {
+    overflow-x: auto;
+}
